Testing enviroment mapping and adding texture class support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,8 @@ enable_cxx_compiler_flag_if_supported("-fopenmp")
 include_directories(include)
 
 add_executable(rt src/main.cpp src/stb_image.cpp)
+
+file(GLOB TEXTURES "textures/*")
+foreach(TEXTURE ${TEXTURES})
+    file(COPY ${TEXTURE} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/textures)
+endforeach(TEXTURE)
