Wood tiled plane and testing scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ enable_cxx_compiler_flag_if_supported("-Wextra")
 enable_cxx_compiler_flag_if_supported("-pedantic")
 enable_cxx_compiler_flag_if_supported("-std=c++11")
 enable_cxx_compiler_flag_if_supported("-O5")
+enable_cxx_compiler_flag_if_supported("-mavx")
 enable_cxx_compiler_flag_if_supported("-fopenmp")
 
 include_directories(include)
